--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -97,7 +97,7 @@ h6 {
   height: auto;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background: #e7ff00; /*#d8ff00 */
+  background: #d7ff00; /*#d8ff00 */
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
